--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -32,7 +32,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-    <script src="_content/BlazorStrap/blazorStrap.js"></script>
+    <!--<script src="_content/BlazorStrap/blazorStrap.js"></script>-->
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Mobsites.Blazor.SignaturePad/bundle.js"></script>
