Added GeoLocation and Location form

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -36,6 +36,7 @@
 
     <script src="_content/Mobsites.Blazor.SignaturePad/bundle.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="/js/geolocation.js"></script>
 
     <script>
         window.initializeCarousel = () => {
